@@ -1,5 +1,13 @@
 2007-11-03  Sebastian Dröge  <slomo@circular-chaos.org>
 
+	* configure.in:
+	* src/Makefile.am:
+	* src/gnome-genius.c: (get_source_language_manager), (new_program):
+	Optionally allow to use GtkSourceView2 instead of GtkSourceView1.
+	Version 2 is preffered if available, otherwise version 1 will be used.
+
+2007-11-03  Sebastian Dröge  <slomo@circular-chaos.org>
+
 	* Makefile.am:
 	* configure.in:
 	* help/omf.make:
